# Heuristic-2048-Agent

./: .gitignore  README.md  pyproject.toml
src/agent2048/: agent.py  game.py
